--- a/package.json
+++ b/package.json
@@ -33,9 +33,7 @@
     "@storybook/addon-interactions": "^6.5.14",
     "@storybook/addon-links": "^6.5.14",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/builder-webpack4": "^6.5.14",
     "@storybook/builder-webpack5": "^6.5.14",
-    "@storybook/manager-webpack4": "^6.5.14",
     "@storybook/manager-webpack5": "^6.5.14",
     "@storybook/react": "^6.5.14",
     "@storybook/testing-library": "^0.0.13",
@@ -81,5 +79,36 @@
         "error"
       ]
     }
+  },
+  "dependencies": {
+    "@babel/core": "^7.20.5",
+    "classnodecomp": "file:../classNodeComp/classNodeComp",
+    "@chakra-ui/react": "^2.4.3",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.10",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
+    "@typescript-eslint/parser": "^5.46.0",
+    "babel-loader": "^8.3.0",
+    "eslint": "^8.29.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "framer-motion": "^7.6.19",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.40.0",
+    "reactflow": "^11.3.3",
+    "rollup": "^3.6.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "typescript": "^4.9.3",
+    "zod": "^3.19.1",
+    "zustand": "^4.1.5"
   }
 }
